objects/SBQQ__ProductAttribute__c.object
<CustomObject>
    <description>Product instance attribute.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__AppliedImmediately__c</fullName>
        <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ApplyToProductOptions__c</fullName>
        <description>Apply configuration attribute selection to product options.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Apply To Product Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AttributeSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Set</label>
        <referenceTo>SBQQ__AttributeSet__c</referenceTo>
        <relationshipLabel>Attribute Items</relationshipLabel>
        <relationshipName>Product_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Attribute__c</fullName>
        <description>Configuration Attribute this product attribute inherits.</description>
        <inlineHelpText>Configuration Attribute this product attribute inherits.</inlineHelpText>
        <label>Configuration Attribute</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The related configuration attribute must be global</errorMessage>
            <filterItems>
                <field>SBQQ__ConfigurationAttribute__c.SBQQ__Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ConfigurationAttribute__c</referenceTo>
        <relationshipLabel>Attribute Items</relationshipLabel>
        <relationshipName>ProductAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__AutoSelect__c</fullName>
        <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Auto-Select</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__HiddenValues__c</fullName>
        <description>Values from the backing picklist field that should be hidden on this bundle.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Hidden Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Hidden__c</fullName>
        <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Hidden</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <description>Indicates whether the attributes requires a value.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Sequence__c</fullName>
        <description>Order in which this attribute is displayed</description>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShownValues__c</fullName>
        <description>Values from the backing picklist field that should be shown on this bundle.</description>
        <inlineHelpText>Unsupported Field</inlineHelpText>
        <label>Shown Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetField__c</fullName>
        <formula>TEXT(SBQQ__Attribute__r.SBQQ__TargetField__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Field</label>
        <type>Text</type>
    </fields>
    <label>Attribute Item</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>